Fix Hero Text on Tablet sizing

--- a/styles/pages/_hero.scss
+++ b/styles/pages/_hero.scss
@@ -28,7 +28,7 @@
 
     @include tablet {
       --text-size: 23vw;
-      top: 62%;
+      top: 54%;
     }
     @include desktop {
       --text-size: 14vw;
@@ -129,7 +129,7 @@
     background-color: rgba(240, 20, 20, 0.9);
     z-index: 5;
 
-    @include desktop {
+    @include tablet {
       --cta-height: 8vmin;
     }
 
